v2.0 全面重构: 代码结构优化 + Bug修复 + README更新
## 核心重构
- 消除150+行重复代码: 统一 applyDirModify() 方向计算, doExpand/doShrink/doScreen 委托到统一方法
- 所有模块继承 MegaModule 统一生命周期, onDisable() 自动清理事件监听器
- 命名统一: listen()注册事件, cmd()注册命令

## Bug修复
- TeleportModule: 新增 onQuit 清理传送请求, 过期请求不再永久驻留内存
- HomeModule: /homes 查看他人时添加权限检查
- BindModule: 新增 onQuit 清理绑定数据
- MarketModule: 新增 onQuit 清理 pendingBuy/browsingPage
- RTPModule: 新增 onQuit 清理 cooldowns
- KitModule: 新增 onQuit 清理 cooldowns
- ClaimModule: onQuit 清理所有会话状态 + 过期邀请自动清理

## 文件变更
- MegaPlugin.java: 短方法名 economy()/teleport()/punish(), 保留旧方法兼容
- plugin.yml: 中文描述, 添加缺少的权限节点
- config.yml: 新增 rtp/claim 配置段
- README.md: 完整文档 + 构建说明 + 联系方式
- 所有模块: 统一代码风格, 修复空指针隐患

## 注意事项
- 仓库仅提供源码, 不包含预编译 JAR
- 已知部分问题持续修复中
- 欢迎反馈: QQ 3957394226 / 邮箱 15116355055@163.com