@@ -4,254 +4,173 @@ import com.megaplugin.MegaPlugin;
 import com.megaplugin.util.DataFile;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
-import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
+import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * 经济模块 — /bal /pay /eco /baltop
+ */
 public class EconomyModule extends MegaModule {
 
-    private final DataFile dataFile;
+    private final DataFile data = new DataFile(plugin, "economy.yml");
     private final Map<UUID, Double> balances = new HashMap<>();
 
-    public EconomyModule(MegaPlugin plugin) {
-        super(plugin);
-        dataFile = new DataFile(plugin, "economy.yml");
-    }
+    public EconomyModule(MegaPlugin plugin) { super(plugin); }
 
     @Override
     public void onEnable() {
-        registerListener();
-        plugin.getCommand("balance").setExecutor(new BalanceCmd());
-        plugin.getCommand("pay").setExecutor(new PayCmd());
-        plugin.getCommand("eco").setExecutor(new EcoCmd());
-        plugin.getCommand("baltop").setExecutor(new BaltopCmd());
+        cmd("balance", new BalanceCmd());
+        cmd("pay", new PayCmd());
+        cmd("eco", new EcoCmd());
+        cmd("baltop", new BaltopCmd());
 
-        // Load balances
-        for (String key : dataFile.getConfig().getKeys(false)) {
-            try {
-                UUID uuid = UUID.fromString(key);
-                balances.put(uuid, dataFile.getConfig().getDouble(key, 0.0));
-            } catch (Exception ignored) {}
+        for (String k : data.getConfig().getKeys(false)) {
+            try { balances.put(UUID.fromString(k), data.getConfig().getDouble(k, 0.0)); }
+            catch (Exception ignored) {}
         }
     }
 
     @Override
     public void onDisable() {
-        for (var entry : balances.entrySet()) {
-            dataFile.getConfig().set(entry.getKey().toString(), entry.getValue());
+        for (var e : balances.entrySet()) data.getConfig().set(e.getKey().toString(), e.getValue());
+        data.save();
+        super.onDisable();
+    }
+
+    private void cmd(String name, CommandExecutor exe) {
+        var c = plugin.getCommand(name);
+        if (c != null) {
+            c.setExecutor(exe);
+            if (exe instanceof TabCompleter t) c.setTabCompleter(t);
         }
-        dataFile.save();
     }
 
-    public double getBalance(Player player) {
-        return balances.getOrDefault(player.getUniqueId(),
-                plugin.getConfig().getDouble("economy.starting-balance", 100.0));
-    }
+    // ── API ──
+    public double bal(UUID id) { return balances.getOrDefault(id, cfgDouble("economy.starting-balance", 100.0)); }
+    public boolean has(UUID id, double amount) { return bal(id) >= amount; }
 
-    public double getBalance(UUID uuid) {
-        return balances.getOrDefault(uuid, 0.0);
-    }
-
-    public void setBalance(Player player, double amount) {
-        balances.put(player.getUniqueId(), Math.max(0, Math.round(amount * 100.0) / 100.0));
-    }
-    public void setBalance(UUID uuid, double amount) {
-        balances.put(uuid, Math.max(0, Math.round(amount * 100.0) / 100.0));
-    }
-
-    public boolean hasEnough(Player player, double amount) {
-        return getBalance(player) >= amount;
-    }
-    public boolean hasEnough(UUID uuid, double amount) {
-        return getBalance(uuid) >= amount;
-    }
-
-    public boolean deposit(Player player, double amount) {
-        double current = getBalance(player);
-        setBalance(player, current + amount);
-        return true;
-    }
-    public boolean deposit(UUID uuid, double amount) {
-        balances.put(uuid, Math.max(0, Math.round(getBalance(uuid) + amount) * 100.0 / 100.0));
+    public boolean deposit(UUID id, double amount) {
+        balances.put(id, round(bal(id) + amount));
         return true;
     }
 
-    public boolean withdraw(Player player, double amount) {
-        if (!hasEnough(player, amount)) return false;
-        setBalance(player, getBalance(player) - amount);
-        return true;
-    }
-    public boolean withdraw(UUID uuid, double amount) {
-        if (!hasEnough(uuid, amount)) return false;
-        setBalance(uuid, getBalance(uuid) - amount);
+    public boolean withdraw(UUID id, double amount) {
+        if (!has(id, amount)) return false;
+        balances.put(id, round(bal(id) - amount));
         return true;
     }
 
-    public boolean transfer(Player from, Player to, double amount) {
+    public boolean transfer(UUID from, UUID to, double amount) {
         if (!withdraw(from, amount)) return false;
         deposit(to, amount);
         return true;
     }
 
-    private String formatMoney(double amount) {
-        String symbol = plugin.getConfig().getString("economy.currency-symbol", "$");
-        return symbol + String.format("%.2f", amount);
+    private double round(double v) { return Math.round(v * 100.0) / 100.0; }
+    private double cfgDouble(String path, double def) { return plugin.getConfig().getDouble(path, def); }
+    private String fmt(double v) {
+        return plugin.getConfig().getString("economy.currency-symbol", "$") + String.format("%.2f", v);
     }
 
     @SuppressWarnings("deprecation")
-    private Player findPlayer(String name) {
-        return plugin.getServer().getPlayer(name);
-    }
-
+    private Player player(String name) { return plugin.getServer().getPlayer(name); }
     @SuppressWarnings("deprecation")
-    private OfflinePlayer findOffline(String name) {
-        OfflinePlayer off = plugin.getServer().getOfflinePlayer(name);
-        if (off != null && off.hasPlayedBefore()) return off;
-        return null;
+    private OfflinePlayer offline(String name) {
+        var off = plugin.getServer().getOfflinePlayer(name);
+        return (off != null && off.hasPlayedBefore()) ? off : null;
     }
 
-    private class BalanceCmd implements CommandExecutor {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    // ── 命令 ──
+    class BalanceCmd implements CommandExecutor {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.economy")) { p.sendMessage(msg("no-permission")); return true; }
-            if (args.length > 0 && p.hasPermission("megaplugin.economy.admin")) {
-                OfflinePlayer target = findOffline(args[0]);
-                if (target == null) { p.sendMessage(msg("player-not-found")); return true; }
-                double bal = getBalance(target.getUniqueId());
-                p.sendMessage(msg("prefix") + " §7" + (target.getName() != null ? target.getName() : args[0]) + " 的余额: §e" + formatMoney(bal));
+            if (a.length > 0 && p.hasPermission("megaplugin.economy.admin")) {
+                var t = offline(a[0]);
+                if (t == null) { p.sendMessage(msg("player-not-found")); return true; }
+                p.sendMessage(msg("prefix") + " §7" + (t.getName() != null ? t.getName() : a[0]) + " 余额: §e" + fmt(bal(t.getUniqueId())));
                 return true;
             }
-            p.sendMessage(msg("prefix") + " §7余额: §e" + formatMoney(getBalance(p)));
+            p.sendMessage(msg("prefix") + " §7余额: §e" + fmt(bal(p.getUniqueId())));
             return true;
         }
     }
 
-    private class PayCmd implements CommandExecutor, TabCompleter {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    class PayCmd implements CommandExecutor, TabCompleter {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.economy")) { p.sendMessage(msg("no-permission")); return true; }
-            if (args.length < 2) { p.sendMessage(msg("prefix") + " §c用法: /pay <玩家> <金额>"); return true; }
-
-            Player target = findPlayer(args[0]);
-            if (target == null) { p.sendMessage(msg("player-not-found")); return true; }
-            if (target.equals(p)) { p.sendMessage(msg("prefix") + " §c你不能给自己转账！"); return true; }
-
+            if (a.length < 2) { p.sendMessage(msg("prefix") + " §c用法: /pay <玩家> <金额>"); return true; }
+            Player t = player(a[0]);
+            if (t == null || t == p) { p.sendMessage(msg("prefix") + " §c目标无效！"); return true; }
             double amount;
-            try { amount = Double.parseDouble(args[1]); } catch (NumberFormatException e) {
-                p.sendMessage(msg("invalid-number")); return true;
-            }
+            try { amount = Double.parseDouble(a[1]); } catch (Exception ex) { p.sendMessage(msg("invalid-number")); return true; }
             if (amount <= 0) { p.sendMessage(msg("prefix") + " §c金额必须大于0！"); return true; }
-
-            if (!transfer(p, target, amount)) {
-                p.sendMessage(msg("prefix") + " §c余额不足！当前余额: " + formatMoney(getBalance(p)));
-                return true;
+            if (!transfer(p.getUniqueId(), t.getUniqueId(), amount)) {
+                p.sendMessage(msg("prefix") + " §c余额不足！"); return true;
             }
-            p.sendMessage(msg("prefix") + " §a你向 §e" + target.getName() + " §a支付了 §e" + formatMoney(amount));
-            target.sendMessage(msg("prefix") + " §a你收到 §e" + formatMoney(amount) + " §a来自 §e" + p.getName());
+            p.sendMessage(msg("prefix") + " §a已向 §e" + t.getName() + " §a支付 §e" + fmt(amount));
+            t.sendMessage(msg("prefix") + " §a收到 §e" + fmt(amount) + " §a来自 §e" + p.getName());
             return true;
         }
-
-        @Override
-        public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
-            if (args.length == 1) {
-                Player p = sender instanceof Player pl ? pl : null;
-                return plugin.getServer().getOnlinePlayers().stream()
-                        .filter(pl -> !pl.equals(p))
-                        .map(Player::getName)
-                        .filter(n -> n.toLowerCase().startsWith(args[0].toLowerCase()))
-                        .collect(Collectors.toList());
-            }
-            return Collections.emptyList();
+        public List<String> onTabComplete(CommandSender s, Command c, String alias, String[] a) {
+            if (a.length == 1) return plugin.getServer().getOnlinePlayers().stream()
+                    .filter(pl -> !pl.equals(s)).map(Player::getName)
+                    .filter(n -> n.toLowerCase().startsWith(a[0].toLowerCase())).toList();
+            return List.of();
         }
     }
 
-    private class EcoCmd implements CommandExecutor, TabCompleter {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!sender.hasPermission("megaplugin.economy.admin")) { sender.sendMessage(msg("no-permission")); return true; }
-            if (args.length < 3) { sender.sendMessage(msg("prefix") + " §c用法: /eco <give|take|set> <玩家> <金额>"); return true; }
-
-            OfflinePlayer target = findOffline(args[1]);
-            if (target == null) { sender.sendMessage(msg("player-not-found")); return true; }
-
+    class EcoCmd implements CommandExecutor, TabCompleter {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!s.hasPermission("megaplugin.economy.admin")) { s.sendMessage(msg("no-permission")); return true; }
+            if (a.length < 3) { s.sendMessage(msg("prefix") + " §c用法: /eco <give|take|set> <玩家> <金额>"); return true; }
+            var t = offline(a[1]);
+            if (t == null) { s.sendMessage(msg("player-not-found")); return true; }
             double amount;
-            try { amount = Double.parseDouble(args[2]); } catch (NumberFormatException e) {
-                sender.sendMessage(msg("invalid-number")); return true;
-            }
-
-            String action = args[0].toLowerCase();
-            UUID uuid = target.getUniqueId();
-            String name = target.getName() != null ? target.getName() : args[1];
-
-            switch (action) {
-                case "give" -> {
-                    balances.put(uuid, getBalance(uuid) + amount);
-                    sender.sendMessage(msg("prefix") + " §a给予 " + name + " " + formatMoney(amount));
-                }
-                case "take" -> {
-                    balances.put(uuid, Math.max(0, getBalance(uuid) - amount));
-                    sender.sendMessage(msg("prefix") + " §a扣除 " + name + " " + formatMoney(amount));
-                }
-                case "set" -> {
-                    balances.put(uuid, Math.max(0, amount));
-                    sender.sendMessage(msg("prefix") + " §a设置 " + name + " 的余额为 " + formatMoney(amount));
-                }
-                default -> sender.sendMessage(msg("prefix") + " §c用法: /eco <give|take|set> <玩家> <金额>");
+            try { amount = Double.parseDouble(a[2]); } catch (Exception ex) { s.sendMessage(msg("invalid-number")); return true; }
+            UUID id = t.getUniqueId();
+            String name = t.getName() != null ? t.getName() : a[1];
+            switch (a[0].toLowerCase()) {
+                case "give" -> { deposit(id, amount); s.sendMessage(msg("prefix") + " §a给予 " + name + " " + fmt(amount)); }
+                case "take" -> { balances.put(id, Math.max(0, bal(id) - amount)); s.sendMessage(msg("prefix") + " §a扣除 " + name + " " + fmt(amount)); }
+                case "set" -> { balances.put(id, Math.max(0, amount)); s.sendMessage(msg("prefix") + " §a设置 " + name + " 余额为 " + fmt(amount)); }
+                default -> s.sendMessage(msg("prefix") + " §c用法: /eco <give|take|set> <玩家> <金额>");
             }
             return true;
         }
-
-        @Override
-        public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
-            if (args.length == 1) return Arrays.asList("give", "take", "set");
-            if (args.length == 2) {
-                return plugin.getServer().getOnlinePlayers().stream()
-                        .map(Player::getName)
-                        .filter(n -> n.toLowerCase().startsWith(args[1].toLowerCase()))
-                        .collect(Collectors.toList());
-            }
-            return Collections.emptyList();
+        public List<String> onTabComplete(CommandSender s, Command c, String alias, String[] a) {
+            if (a.length == 1) return List.of("give", "take", "set");
+            if (a.length == 2) return plugin.getServer().getOnlinePlayers().stream()
+                    .map(Player::getName).filter(n -> n.toLowerCase().startsWith(a[1].toLowerCase())).toList();
+            return List.of();
         }
     }
 
-    private class BaltopCmd implements CommandExecutor {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!sender.hasPermission("megaplugin.economy")) { sender.sendMessage(msg("no-permission")); return true; }
-
+    class BaltopCmd implements CommandExecutor {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!s.hasPermission("megaplugin.economy")) { s.sendMessage(msg("no-permission")); return true; }
             int page = 1;
-            if (args.length > 0) {
-                try { page = Integer.parseInt(args[0]); } catch (NumberFormatException ignored) {}
-            }
+            if (a.length > 0) try { page = Integer.parseInt(a[0]); } catch (Exception ignored) {}
 
-            List<Map.Entry<UUID, Double>> sorted = balances.entrySet().stream()
+            var sorted = balances.entrySet().stream()
                     .sorted(Map.Entry.<UUID, Double>comparingByValue().reversed())
                     .collect(Collectors.toList());
+            int pp = 10, tp = Math.max(1, (sorted.size() + pp - 1) / pp);
+            page = Math.max(1, Math.min(page, tp));
+            int start = (page - 1) * pp, end = Math.min(start + pp, sorted.size());
 
-            int perPage = 10;
-            int totalPages = Math.max(1, (sorted.size() + perPage - 1) / perPage);
-            page = Math.max(1, Math.min(page, totalPages));
-            int start = (page - 1) * perPage;
-            int end = Math.min(start + perPage, sorted.size());
-
-            sender.sendMessage(msg("prefix") + " §6§l富豪榜 §7(第 " + page + "/" + totalPages + " 页)");
+            s.sendMessage(msg("prefix") + " §6§l富豪榜 §7(第" + page + "/" + tp + "页)");
             for (int i = start; i < end; i++) {
-                var entry = sorted.get(i);
-                String name = Bukkit.getOfflinePlayer(entry.getKey()).getName();
-                if (name == null) name = entry.getKey().toString().substring(0, 8);
-                sender.sendMessage(" §e" + (i + 1) + ". §7" + name + " §f- §e" + formatMoney(entry.getValue()));
+                var e = sorted.get(i);
+                String name = Bukkit.getOfflinePlayer(e.getKey()).getName();
+                if (name == null) name = e.getKey().toString().substring(0, 8);
+                s.sendMessage(" §e" + (i + 1) + ". §7" + name + " §f- §e" + fmt(e.getValue()));
             }
-
-            if (sorted.isEmpty()) {
-                sender.sendMessage(msg("prefix") + " §7暂无余额记录。");
-            }
+            if (sorted.isEmpty()) s.sendMessage(msg("prefix") + " §7暂无记录。");
             return true;
         }
     }
