@@ -3,188 +3,132 @@ package com.megaplugin.module;
 import com.megaplugin.MegaPlugin;
 import com.megaplugin.util.DataFile;
 import org.bukkit.Location;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
-import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
+import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+/**
+ * 家园模块 — /sethome /home /delhome /homes
+ */
 public class HomeModule extends MegaModule {
 
-    private DataFile dataFile;
+    private final DataFile data;
 
     public HomeModule(MegaPlugin plugin) {
         super(plugin);
+        data = new DataFile(plugin, "homes.yml");
     }
 
     @Override
     public void onEnable() {
-        dataFile = new DataFile(plugin, "homes.yml");
-        registerListener();
-        registerCommand("sethome", new SethomeCmd());
-        registerCommand("home", new HomeCmd());
-        registerCommand("delhome", new DelhomeCmd());
-        registerCommand("homes", new HomesCmd());
+        cmd("sethome", new SethomeCmd());
+        cmd("home", new HomeCmd());
+        cmd("delhome", new DelhomeCmd());
+        cmd("homes", new HomesCmd());
     }
 
     @Override
     public void onDisable() {
-        dataFile.save();
+        data.save();
+        super.onDisable();
     }
 
-    public Location getHome(Player player, String name) {
-        String path = player.getUniqueId() + "." + name;
-        return dataFile.getConfig().getLocation(path);
-    }
-
-    public Location getHome(UUID uuid, String name) {
-        return dataFile.getConfig().getLocation(uuid + "." + name);
-    }
-
-    public void setHome(Player player, String name, Location loc) {
-        dataFile.getConfig().set(player.getUniqueId() + "." + name, loc);
-        dataFile.save();
-    }
-
-    public void delHome(Player player, String name) {
-        dataFile.getConfig().set(player.getUniqueId() + "." + name, null);
-        dataFile.save();
-    }
-
-    public List<String> getHomes(Player player) {
-        var section = dataFile.getConfig().getConfigurationSection(player.getUniqueId().toString());
-        if (section == null) return Collections.emptyList();
-        return new ArrayList<>(section.getKeys(false));
-    }
-
-    public boolean hasHome(Player player, String name) {
-        return dataFile.getConfig().contains(player.getUniqueId() + "." + name);
-    }
-
-    @SuppressWarnings("deprecation")
-    public Player resolvePlayer(String name) {
-        return plugin.getServer().getPlayer(name);
-    }
-
-    @SuppressWarnings("deprecation")
-    public UUID resolveUuid(String name) {
-        Player p = plugin.getServer().getPlayer(name);
-        if (p != null) return p.getUniqueId();
-        // Try offline player
-        var offline = plugin.getServer().getOfflinePlayer(name);
-        if (offline != null && offline.hasPlayedBefore()) {
-            return offline.getUniqueId();
-        }
-        return null;
-    }
-
-    private void registerCommand(String name, CommandExecutor executor) {
-        var cmd = plugin.getCommand(name);
-        if (cmd != null) {
-            cmd.setExecutor(executor);
-            if (executor instanceof TabCompleter t) cmd.setTabCompleter(t);
+    private void cmd(String name, CommandExecutor exe) {
+        var c = plugin.getCommand(name);
+        if (c != null) {
+            c.setExecutor(exe);
+            if (exe instanceof TabCompleter t) c.setTabCompleter(t);
         }
     }
 
-    private class SethomeCmd implements CommandExecutor {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    // ── 数据访问 ──
+    private String path(Player p, String name) { return p.getUniqueId() + "." + name; }
+    private Location get(Player p, String name) { return data.getConfig().getLocation(path(p, name)); }
+    private void set(Player p, String name, Location loc) { data.getConfig().set(path(p, name), loc); data.save(); }
+    private void del(Player p, String name) { data.getConfig().set(path(p, name), null); data.save(); }
+    private boolean has(Player p, String name) { return data.getConfig().contains(path(p, name)); }
+    private List<String> list(Player p) {
+        var sec = data.getConfig().getConfigurationSection(p.getUniqueId().toString());
+        return sec == null ? List.of() : new ArrayList<>(sec.getKeys(false));
+    }
+
+    class SethomeCmd implements CommandExecutor {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.home")) { p.sendMessage(msg("no-permission")); return true; }
-            if (args.length == 0) { p.sendMessage(msg("prefix") + " §c用法: /sethome <名字>"); return true; }
-            String name = args[0].toLowerCase();
-
-            // Count homes
+            if (a.length == 0) { p.sendMessage(msg("prefix") + " §c用法: /sethome <名字>"); return true; }
+            String n = a[0].toLowerCase();
             int max = p.hasPermission("megaplugin.home.other") ? 50 : 10;
-            List<String> homes = getHomes(p);
-            if (homes.size() >= max && !hasHome(p, name)) {
-                p.sendMessage(msg("prefix") + " §c你最多只能设置 " + max + " 个家！");
-                return true;
+            if (list(p).size() >= max && !has(p, n)) {
+                p.sendMessage(msg("prefix") + " §c你最多只能设置 " + max + " 个家！"); return true;
             }
-
-            setHome(p, name, p.getLocation());
-            p.sendMessage(msg("prefix") + " §a家 §e" + name + " §a设置成功！");
+            set(p, n, p.getLocation());
+            p.sendMessage(msg("prefix") + " §a家 §e" + n + " §a设置成功！");
             return true;
         }
     }
 
-    private class HomeCmd implements CommandExecutor, TabCompleter {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    class HomeCmd implements CommandExecutor, TabCompleter {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.home")) { p.sendMessage(msg("no-permission")); return true; }
-            List<String> homes = getHomes(p);
-            if (homes.isEmpty()) { p.sendMessage(msg("prefix") + " §c你还没有家！使用 /sethome <名字> 来设置"); return true; }
-            String name = args.length > 0 ? args[0].toLowerCase() : "home";
-            Location loc = getHome(p, name);
-            if (loc == null) { p.sendMessage(msg("prefix") + " §c家 §e" + name + " §c不存在！"); return true; }
+            if (list(p).isEmpty()) { p.sendMessage(msg("prefix") + " §c你还没有家！"); return true; }
+            String n = a.length > 0 ? a[0].toLowerCase() : "home";
+            Location loc = get(p, n);
+            if (loc == null) { p.sendMessage(msg("prefix") + " §c家不存在！"); return true; }
             p.teleport(loc);
-            p.sendMessage(msg("prefix") + " §a已传送到家 §e" + name);
+            p.sendMessage(msg("prefix") + " §a已传送到家 §e" + n);
             return true;
         }
-
-        @Override
-        public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
-            if (args.length == 1 && sender instanceof Player p) {
-                return getHomes(p).stream()
-                        .filter(h -> h.startsWith(args[0].toLowerCase()))
-                        .collect(Collectors.toList());
-            }
-            return Collections.emptyList();
+        public List<String> onTabComplete(CommandSender s, Command c, String alias, String[] a) {
+            if (a.length == 1 && s instanceof Player p)
+                return list(p).stream().filter(h -> h.startsWith(a[0].toLowerCase())).toList();
+            return List.of();
         }
     }
 
-    private class DelhomeCmd implements CommandExecutor, TabCompleter {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    class DelhomeCmd implements CommandExecutor, TabCompleter {
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.home")) { p.sendMessage(msg("no-permission")); return true; }
-            if (args.length == 0) { p.sendMessage(msg("prefix") + " §c用法: /delhome <名字>"); return true; }
-            String name = args[0].toLowerCase();
-            if (!hasHome(p, name)) { p.sendMessage(msg("prefix") + " §c家 §e" + name + " §c不存在！"); return true; }
-            delHome(p, name);
-            p.sendMessage(msg("prefix") + " §a家 §e" + name + " §a已删除！");
+            if (a.length == 0) { p.sendMessage(msg("prefix") + " §c用法: /delhome <名字>"); return true; }
+            String n = a[0].toLowerCase();
+            if (!has(p, n)) { p.sendMessage(msg("prefix") + " §c家不存在！"); return true; }
+            del(p, n);
+            p.sendMessage(msg("prefix") + " §a家已删除！");
             return true;
         }
-
-        @Override
-        public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
-            if (args.length == 1 && sender instanceof Player p) {
-                return getHomes(p).stream()
-                        .filter(h -> h.startsWith(args[0].toLowerCase()))
-                        .collect(Collectors.toList());
-            }
-            return Collections.emptyList();
+        public List<String> onTabComplete(CommandSender s, Command c, String alias, String[] a) {
+            if (a.length == 1 && s instanceof Player p)
+                return list(p).stream().filter(h -> h.startsWith(a[0].toLowerCase())).toList();
+            return List.of();
         }
     }
 
-    private class HomesCmd implements CommandExecutor {
-        @Override
-        public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
-            if (!(sender instanceof Player p)) { sender.sendMessage(msg("player-only")); return true; }
+    class HomesCmd implements CommandExecutor {
+        @SuppressWarnings("deprecation")
+        public boolean onCommand(CommandSender s, Command c, String l, String[] a) {
+            if (!(s instanceof Player p)) { s.sendMessage(msg("player-only")); return true; }
             if (!p.hasPermission("megaplugin.home")) { p.sendMessage(msg("no-permission")); return true; }
 
-            if (args.length > 0 && p.hasPermission("megaplugin.home.other")) {
-                UUID uuid = resolveUuid(args[0]);
-                if (uuid == null) { p.sendMessage(msg("player-not-found")); return true; }
-                var section = dataFile.getConfig().getConfigurationSection(uuid.toString());
-                if (section == null || section.getKeys(false).isEmpty()) {
-                    p.sendMessage(msg("prefix") + " §7" + args[0] + " 没有家。");
+            if (a.length > 0) {
+                if (!p.hasPermission("megaplugin.home.other")) { p.sendMessage(msg("no-permission")); return true; }
+                var off = plugin.getServer().getOfflinePlayer(a[0]);
+                if (off == null || !off.hasPlayedBefore()) { p.sendMessage(msg("player-not-found")); return true; }
+                var sec = data.getConfig().getConfigurationSection(off.getUniqueId().toString());
+                if (sec == null || sec.getKeys(false).isEmpty()) {
+                    p.sendMessage(msg("prefix") + " §7" + a[0] + " 没有家。");
                 } else {
-                    p.sendMessage(msg("prefix") + " §7" + args[0] + " 的家: §e" + String.join("§7, §e", section.getKeys(false)));
+                    p.sendMessage(msg("prefix") + " §7" + a[0] + " 的家: §e" + String.join("§7, §e", sec.getKeys(false)));
                 }
                 return true;
             }
 
-            List<String> homes = getHomes(p);
-            if (homes.isEmpty()) {
-                p.sendMessage(msg("prefix") + " §7你还没有家！使用 /sethome <名字> 来设置");
-            } else {
-                p.sendMessage(msg("prefix") + " §7你的家: §e" + String.join("§7, §e", homes));
-            }
+            var homes = list(p);
+            p.sendMessage(homes.isEmpty()
+                    ? msg("prefix") + " §7你还没有家！"
+                    : msg("prefix") + " §7你的家: §e" + String.join("§7, §e", homes));
             return true;
         }
     }
